# web_app2

./: Cargo.toml  Rocket.toml
migrations/2018-07-21-145427_create_posts/: up.sql
src/: creater_setting.rs  db.rs  image.rs  main.rs  news_posts.rs  schema.rs  signin.rs  signout.rs  signup.rs  user_profile.rs
static/: 404error.html.tera  Home.html.tera  about_me.html.tera  creater_1.html.tera  creater_setting.html.tera  creaters.html.tera  gallary.html.tera  help.html.tera  news.html.tera  news_creater.html.tera  profile.html.tera  profile_left.html.tera  sign_up.html.tera  signin.html.tera
