[package]
name = "creater_board"
version = "0.1.0"
authors = ["kazuha <mami.tomoe4@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "=1.3.0", features = ["postgres","r2d2","chrono"]}
dotenv = "*"
multipart = "*"
rocket_static_fs = "0.5.1"
formdata = "*"
regex = "1.0.2"
bcrypt = "0.2.0"
comrak = "*"
chrono = { version = "*", features = ["serde"]}
chrono-tz = { version = "0.5", features = ["serde"] }
time = "*"



[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]